--- a/AutoCmdb/templates/user/user_input.html
+++ b/AutoCmdb/templates/user/user_input.html
@@ -99,7 +99,7 @@
             language: "zh-TW",
             allowedFileExtensions: ["csv"],
             mainClass: "input-group-lg", //文件输入框为大型号
-            uploadUrl: "{% url 'asset_input' %}", //上传图片的服务器地址
+            uploadUrl: "{% url 'user_input' %}", //上传图片的服务器地址
             uploadExtraData: {
                 "csrfmiddlewaretoken": csrftoken //帶上CSRF参数
             },
